Change font-family in style.css

--- a/style.css
+++ b/style.css
@@ -573,7 +573,7 @@ li {
   text-align: center;
   position: relative;
   color: white;
-  font-family: cursive;
+  font-family: "Edu SA Beginner", "Poppins", sans-serif;
   font-weight: 500;
   text-shadow: 0 1px 3px black;
 }
